add basic introduction to genny

--- a/Source/genny/genny.Blazor/Pages/Index.razor
+++ b/Source/genny/genny.Blazor/Pages/Index.razor
@@ -2,8 +2,28 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Genny the code generator</h1>
 
-Welcome to your new app.
+<div>
+    <p>
+        Hallo lieber Entwickler,
+    </p>
+    <p>
+        diese Anwendung ist unsere lebende Dokumentation zu unseren beliebtesten Anwendungsmustern und natürlich zu
+        den Standards, die wir so haben.
+    </p>
+    
+    <p>
+        Wir möchten nicht, dass jeder von unserem Team sich immer neue Dinge ausdenken muss, wie er den Datenzugriff
+        gestaltet, Logging einbindet oder Tabellen zur Anzeige bringt.
+    </p>
 
-<SurveyPrompt Title="How is Blazor working for you?"/>
+    <p>
+        In dieser Anwendung findest Du Code Generatoren für die meisten unserer Standard-Anwendungsfälle.
+    </p>
+
+    <p>
+        Viel Erfolg,<br/>
+        Dein kleiner grüner Elefant Genny
+    </p>
+</div>
